create Dashbord page

--- a/E-commers-main/src/Component/Pages/Slider/Slider.css
+++ b/E-commers-main/src/Component/Pages/Slider/Slider.css
@@ -1,4 +1,4 @@
-.carousel {
+/* .carousel {
     position: relative;
     width: 100%;
     max-width: 1200px;
@@ -31,4 +31,4 @@
     height: 30px;
     border-radius: 50%;
   }
-  
+   */
