--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,133 @@
-.sidebar{
-  height: 100vh;
+.sidebar {
+  height: auto;
   background-color: #eee;
 }
-.sidebar li{
+
+.sidebar li {
   padding: 10px 5px;
   text-align: center;
 }
-.sidebar li a{
+
+.sidebar li a {
   text-decoration: none;
+}
+
+/* card proudect */
+.card {
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  margin-bottom: 30px;
+  background-color: #fff;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.card-img-top {
+  height: 300px;
+  object-fit: cover;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.card-text {
+  max-height: 80px;
+  overflow-y: auto;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+
+.card-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+
+.card-text::-webkit-scrollbar {
+  width: 6px;
+}
+
+.card-text::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 3px;
+}
+
+.card-text::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  font-size: 14px;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+  color: #fff;
+}
+
+.proudect-img {
+
+  padding: 80px;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+.carddetails-img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+  padding: 5%;
+
+
+}
+
+
+.login-container {
+  background: linear-gradient(to right, #6a11cb, #2575fc);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-login {
+  background: white;
+  border-radius: 15px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-primary {
+  background-color: #2575fc;
+  border: none;
+}
+
+.btn-primary:hover {
+  background-color: #2575fc;
 }
